# PAAlternativeLauncher

./: CMakeLists.txt  PAAlternativeLauncher.cpp  PAAlternativeLauncher.desktop  PAAlternativeLauncher.h  PAAlternativeLauncher.kdev4  README.md  advanceddialog.cpp  advanceddialog.h  bundle.cpp  bundle.h  fixup_deb.sh.in  information.cpp  information.h  main.cpp  moddatabaseframe.cpp  moddatabaseframe.h  paalternativelauncher.cpp  paalternativelauncher.desktop  paalternativelauncher.h  paalternativelauncher.kdev4  paalternativelauncher.qrc  paalternativelauncher.rc  patcher.cpp  patcher.h  sha1.cpp  sha1.h
deb/: README  copyright
mac/paalternativelauncher.app.clean/Contents/: Info.plist
mac/paalternativelauncher.app.clean/Contents/Resources/: PAAlternativeLauncher.icns
windows/: Licence.rtf  build.bat  installer.wxs  package.bat
